--- a/src/app/components/invoice-summary/invoice-summary.component.html
+++ b/src/app/components/invoice-summary/invoice-summary.component.html
@@ -3,7 +3,7 @@
     <div class="company-info">
       <h2>{{ company.name }}</h2>
       <p>{{ company.address }}</p>
-      <p>Phones: {{ company.phones.join(', ') }}</p>
+      <p>Phones: {{ company.phones | phones }}</p>
     </div>
   </ng-container>
 
